# nlp-link

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  pytest.yaml
docs/: README.md  mkdocs.yaml  page1.md
nlp_link/: linker.py  linker_utils.py
nlp_link/soc_mapper/: README.md  config.yaml  soc_map.py  soc_map_utils.py
nlp_link/utils/: utils.py
page1/: index.html
tests/: test_linker.py  test_soc_mapper.py
utils/: utils.py
