[tool.poetry]
name = "nlp-link"
version = "0.1.0"
description = "A python package to semantically link two lists of texts."
authors = ["Nesta <dataanalytics@nesta.org.uk>"]
readme = "README.md"
packages = [{include = "nlp_link"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
sentence-transformers = "^2.1.0"
torch = "^1.10.0"
pytest = "^8.2.0"
tqdm = "^4.64.1"
numpy = "^1.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
