[tool.poetry]
name = "nlp-link"
version = "0.1.0"
description = "A python package to semantically link two lists of texts."
authors = ["Nesta <dataanalytics@nesta.org.uk>"]
readme = "README.md"
packages = [{include = "nlp_link", "soc_mapper"}]

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.5.1"
pandas = "^2.2.2"
sentence-transformers = "^2.7.0"
torch = "^1.13.1"
pytest = "^8.3.2"
tqdm = "^4.66.4"
numpy = "^1.26.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
